methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: ';' expected but 'else' found.
    };avance(); else if (getCouleurSol()==Color.green){
                ^